[package]
name = "analog"
version = "0.0.2"
authors = ["Philip Koperski <philip@pretzelwagon.com>"]
edition = "2018"
license = "Unlicense"

description = "Analogous, indented syntax for the Rust programming language."
keywords = ["language"]

homepage = "https://github.com/asvln/analog"
repository = "https://github.com/asvln/analog"
documentation = "https://github.com/asvln/analog"
